syntax = "proto3";

// 命 令 号: 100
// 命令名称: file_send_max_pack_size
// 命令描述: 获取下发文件到设备时，每次最大可以接受的分包数据大小
// 文件名称: s100_file_send_max_pack_size.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbFileSendMaxPackSize";

message FileSendMaxPackSizeRequest {

}

message FileSendMaxPackSizeResponse {
  // ATTR: REQACK
  uint32 max_pack_sz = 1; //文件分包后，一包数据最大长度
}
