syntax = "proto3";

// 命 令 号: 101
// 命令名称: file_send_start
// 命令描述: 启动下发文件
// 文件名称: s101_file_send_start.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbFileSendStart";

message FileSendStartRequest {
  // ATTR: REQUSET
  string path = 1;    //需要下发文件的保存路径
  uint32 pack_num = 2; //文件分包数量
  uint32 file_size = 3; //文件大小
}

message FileSendStartResponse {

}
