syntax = "proto3";

// 命 令 号: 103
// 命令名称: file_send_over
// 命令描述: 下发文件完成
// 文件名称: s103_file_send_over.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbFileSendOver";

message FileSendOverRequest {
  // ATTR: REQUSET
  uint32 file_size = 1; //文件大小
  fixed32 crc32 = 2;  //文件crc32校验
  //参数模型：x32+x26+x23+x22+x16+x12+x11+x10+x8+x7+x5+x4+x2+x+1，
  //多项式（Poly）：0x04C11DB7，
  //初始化值（Init）：0xFFFFFFFF，
  //输入数据反转（RefIn）：True，
  //输出数据反转（RefOut）：True，
  //结果异或值（XorOut）：0xFFFFFFFF
}

message FileSendOverResponse {

}
